# ECS

./: .gitignore  README.md  TODO.todo  makefile  meson.build
include/: ECS.hpp
include/ECS/: ComponentArray.hpp  ComponentManager.hpp  Entity.hpp  EntityManager.hpp  Types.hpp
tests/ECS/: ComponentArray.cpp  ECS.cpp
tests/SECS/: ComponentManager.cpp  EntityManager.cpp
